# Laborly

./: .env.sample  .gitignore  docker-compose.yml  requirements.txt
.github/workflows/: deploy.yml
app/admin/: routes.py  services.py
app/auth/: schemas.py  services.py
app/core/: config.py  dependencies.py  logging.py  upload.py
app/database/: session.py
app/job/: routes.py
app/review/: models.py  services.py
app/service/: models.py  routes.py  schemas.py  services.py
app/worker/: schemas.py  services.py
backend/: .env  .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  pytest.ini  requirements.txt  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 00d52fd8493a_initial_migration_created_multiple_.py  62aa8f75a469_removed_phone_from_worker.py  8aa0c2a6e6ea_create_users_and_kyc_tables.py  cfea59f24ba9_add_worker_and_client_models.py  e83a222f9784_create_users_and_kyc_tables.py
backend/app/: main.py
backend/app/admin/: routes.py  schemas.py  service.py  services.py
backend/app/auth/: routes.py  schemas.py  services.py
backend/app/client/: models.py  routes.py  schemas.py  services.py
backend/app/core/: blacklist.py  config.py  dependencies.py  email.py  email_config.py  exceptions.py  limiter.py  logging.py  schemas.py  security.py  tokens.py  upload.py  validators.py
backend/app/database/: alembic.ini  base.py  config.py  enums.py  init_db.py  migrate.bat  models.py  purge.py  reset.py  seed.py  session.py
backend/app/database/migrations/: env.py
backend/app/database/migrations/versions/: 23a0169b22bd_create_initial_tables.py
backend/app/job/: models.py  routes.py  schemas.py  services.py
backend/app/jobs/: routes.py  schemas.py  service.py
backend/app/messaging/: manager.py  models.py  routes.py  schemas.py  services.py  websocket.py
backend/app/review/: models.py  routes.py  schemas.py  services.py
backend/app/reviews/: routes.py  schemas.py  service.py
backend/app/service/: models.py  routes.py  schemas.py  services.py
backend/app/users/: routes.py  schemas.py  service.py
backend/app/utils/: logger.py  middleware.py
backend/app/worker/: models.py  routes.py  schemas.py  services.py
backend/app/workers/: routes.py  schemas.py  service.py
backend/myapp/admin/: routes.py  schemas.py  services.py
backend/myapp/auth/: routes.py  schemas.py  services.py
backend/myapp/client/: models.py  routes.py  schemas.py  services.py
backend/myapp/core/: blacklist.py  dependencies.py  email.py  email_config.py  limiter.py  logging.py  schemas.py  tokens.py  upload.py  validators.py
backend/myapp/database/: base.py  models.py  session.py
backend/myapp/job/: models.py  routes.py  schemas.py  services.py
backend/myapp/messaging/: models.py  routes.py  schemas.py  services.py  websocket.py
backend/myapp/review/: models.py  routes.py  services.py
backend/myapp/service/: models.py  routes.py  schemas.py  services.py
backend/myapp/worker/: models.py  routes.py  schemas.py  services.py
backend/templates/email/: email_change_notification.html  email_changed.html  final_email_change_notice_to_old.html  new_email_confirmed.html  new_email_verification.html  password_changed.html  password_reset.html  password_reset_confirmation.html  reset_password.html  verification.html  welcome.html
backend/tests/: conftest.py  test_basic.py  test_db.py  test_db_connection.py  test_jobs.py  test_users.py
backend/tests/admin/: test_admin_routes.py
backend/tests/auth/: test_auth_routes.py  test_auth_services.py
backend/tests/client/: test_client_routes.py
backend/tests/job/: test_job_routes.py
backend/tests/messaging/: test_messaging_routes.py
backend/tests/review/: test_review_routes.py
backend/tests/service/: test_service_routes.py
backend/tests/worker/: test_worker_routes.py
docs/: Breakdown.md  Documentation.md  ERD.txt  Flow.md  Flows.md  Glossary.md  README.md  contributors_guideline.md  documentation.md  folder_structure.txt  models.md  roadmap.md  setup.md
docs/folder_structure/: folder_structure.py  folder_structure.txt
nginx/: nginx.conf
